--- a/assets/style.css
+++ b/assets/style.css
@@ -413,3 +413,160 @@ footer {
         font-size: 24px;
     }
 }
+
+@media (max-width: 480px) {
+    header {
+        padding-block: 15px;
+        column-gap: 10px;
+    }
+
+    .header-logo {
+        height: 48px;
+    }
+
+    .header-text {
+        font-size: 18px;
+    }
+
+    .last-news {
+        height: 210px;
+    }
+
+    .last-news-title {
+        font-size: 24px;
+        line-height: 100%;
+    }
+
+    .last-news-text {
+        font-size: 16px;
+        line-height: 120%;
+    }
+
+    .news-title {
+        font-size: 48px;
+        padding-block: 30px;
+    }
+
+    .news-container {
+        row-gap: 30px;
+    }
+
+    .news-item {
+        row-gap: 10px;
+    }
+
+    .news-date {
+        font-size: 12px;
+        padding-inline: 9px;
+        padding-block: 1px;
+    }
+
+    .news-item-title {
+        font-size: 24px;
+    }
+
+    .news-item-text {
+        font-size: 14px;
+        line-height: 140%;
+    }
+
+    .news-item-button-link {
+        height: 32px;
+        padding-inline: 15px;
+        font-size: 12px;
+        gap: 5px;
+    }
+
+    .news-item-button-link::after {
+        content: '';
+        width: 18px;
+        height: 18px;
+        background: url(./images/arrow-right-brand.svg) center/contain no-repeat;   
+    }
+
+    .pagination-group-list {
+        margin-block: 30px;
+        column-gap: 8px;
+    }
+
+    .pagination-button-link {
+        width: 35px;
+        height: 35px;
+        font-size: 12px;
+    }
+
+    .pagination-button-link-before {
+        width: 65px;
+        height: 35px;
+    }
+
+    .pagination-before-arrow {
+        width: 18px;
+        height: 17px;
+    }
+
+    .pagination-button-link-next {
+        width: 65px;
+        height: 35px;
+    }
+
+    .pagination-next-arrow {
+        width: 18px;
+        height: 17px;
+    }
+
+    footer {
+        padding-block: 15px;
+        font-size: 12px;
+    }
+
+    .work-news-container {
+        margin-top: 20px;
+        flex-direction: column;
+    }
+
+    .work-news-info-container {
+        order: 2;
+        width: 100%;
+        margin-top: 20px;
+        row-gap: 15px;
+    }
+
+    .work-news-image-container {
+        order: 1;
+        width: 100%;
+    }
+
+    .work-news-image {
+        width: 100%;
+    }
+
+    .work-news-path {
+        margin-top: 20px;
+        font-size: 12px;
+    }
+
+    .work-news-title {
+        display: none;
+    }
+
+    .work-news-announce {
+        font-size: 18px;
+    }
+
+    .work-news-content {
+        font-size: 14px;
+        line-height: 140%;
+    }
+
+    .work-news-back-button {
+        height: 35px;
+        padding-inline: 10px;
+        font-size: 14px;
+    }
+
+    .work-news-back-button::before {
+        width: 18px;
+        height: 18px;
+    }
+}
