--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url(./fonts/OpenSans.ttf) format('ttf');
+  src: url(./fonts/OpenSans-Regular.ttf) format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 
 @font-face {
     font-family: 'Open Sans';
-    src: url(./fonts/OpenSans.ttf) format('ttf');
+    src: url(./fonts/OpenSans-SemiBold.ttf) format('truetype');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -20,7 +20,7 @@
 
 @font-face {
     font-family: 'Segoe UI';
-    src: url(./fonts/SegoeUI.ttf) format('ttf');
+    src: url(./fonts/SegoeUI-Regular.ttf) format('truetype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -46,10 +46,6 @@ img, picture, video, canvas, svg {
   max-width: 100%; /* Изображения не выходят за контейнер */
 }
 
-input, button, textarea, select {
-  font: inherit; /* Наследование шрифтов от body */
-}
-
 ul, ol {
   list-style: none; /* Убираем маркеры списков */
 }
@@ -58,7 +54,6 @@ a {
   text-decoration: none; /* Убираем подчеркивание ссылок */
   color: inherit;
 }
-
 
 /* =====================
     Utility variables and classes / Утилитарные переменные и классы
@@ -87,6 +82,9 @@ a {
   --font-size-date: 1rem;
   --font-size-path: 1rem;
   --font-size-button: 1rem;
+
+  --line-height-title: 140%;
+  --line-height-content: 160%;
 }
 
 html {
@@ -107,7 +105,7 @@ body {
 }
 
 .date {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     height: 34px;
     width: fit-content;
@@ -120,7 +118,7 @@ body {
 }
 
 .button {
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin-top: auto;
@@ -179,13 +177,14 @@ body {
 
 
 /* =====================
-    main / Файл main.php
+    main-page / Файл main.php
 ===================== */
 
-main {
+.main-page {
     display: flex;
     flex-direction: column;
 }
+
 
 /* =====================
     last_news / Последняя новость
@@ -197,7 +196,7 @@ main {
     justify-content: center;
     row-gap: 30px;
     padding-inline: var(--base-page-inline-indent);
-    height: 645px;
+    height: 646px;
     width: 100%;
     background: var(--last-news__background) center/100% no-repeat;
     color: var(--color-white);
@@ -205,12 +204,15 @@ main {
 
 .last-news__title {
     font-size: var(--font-size-h1);
-    line-height: 100%;
+    font-weight: 600;
+    line-height: var(--line-height-title);
 }
 
 .last-news__text {
     font-size: var(--font-size-content-xl);
+    line-height: var(--line-height-content);
 }
+
 
 /* =====================
     news_list / Новости на главной странице
@@ -242,12 +244,12 @@ main {
 .news-card__title {
     font-size: var(--font-size-h2);
     font-weight: 600;
-    line-height: 140%;
+    line-height: var(--line-height-title);
 }
 
 .news-card__text {
     font-size: var(--font-size-content);
-    line-height: 160%;
+    line-height: var(--line-height-content);
 }
 
 .news-card__button {
@@ -267,6 +269,7 @@ main {
     background: url(./images/arrow-right-white.svg) center/contain no-repeat;
 }
 
+
 /* =====================
     Pagination / Пагинация
 ===================== */
@@ -281,14 +284,14 @@ main {
 }
 
 .pagination__link {
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size: var(--font-size-button);
     font-weight: 600;
     color: var(--color-brand);
-    width: 55px;
-    height: 55px;
+    width: 56px;
+    height: 54px;
     border: 2px solid var(--color-brand);
     border-radius: 50px;
     transition: 0.3s;
@@ -303,11 +306,10 @@ main {
 .pagination__link--before,
 .pagination__link--next {
     width: 106px;
-    height: 55px;
+    height: 54px;
 }
 
 .pagination__arrow {
-    display: inline-flex;
     width: 24px;
     height: 22px;
 }
@@ -344,7 +346,7 @@ main {
 .work-news__title {
     margin-top: 22px;
     font-size: var(--font-size-h1);
-    line-height: 140%;
+    line-height: var(--line-height-title);
     font-weight: 600;
 }
 
@@ -362,19 +364,18 @@ main {
 }
 
 .work-news__announce {
-    display: inline-block;
     font-size: var(--font-size-h2);
     font-weight: 600;
     color: var(--color-brand);
-    line-height: 140%;
+    line-height: var(--line-height-title);
 }
 
 .work-news__content {
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     row-gap: 22px;
     font-size: var(--font-size-content);
-    line-height: 160%;
+    line-height: var(--line-height-content);
 }
 
 .work-news__button {
@@ -388,11 +389,6 @@ main {
   height: 25px;
   background: url('./images/arrow-left-brand.svg') center/contain no-repeat;
 }
-
-/* .work-news__button:hover {
-    background-color: var(--color-brand);
-    color: var(--color-white);
-} */
 
 .work-news__button:hover::before {
     background: url('./images/arrow-right-white.svg') center/contain no-repeat;
@@ -412,6 +408,7 @@ main {
   aspect-ratio: 1;
 }
 
+
 /* =====================
     404 page / Страница 404
 ===================== */
@@ -429,6 +426,7 @@ main {
 }
 
 .not-found__button {
+    margin-top: auto;
     height: 54px;
 }
 
@@ -479,8 +477,12 @@ main {
 }
 
 @media (max-width: 768px) {
-    .last-news {
-        height: 420px;
+    :root {
+        --font-size-h1: 3rem;
+        --font-size-content-xl: 1.5rem;
+
+        --line-height-title: 120%;
+        --line-height-content: 140%;
     }
 }
 
@@ -490,7 +492,7 @@ main {
         --font-size-footer: 0.75rem;
         --font-size-h1: 1.5rem;
         --font-size-h2: 1.25rem;
-        --font-size-content: 1rem;
+        --font-size-content: 0.75rem;
         --font-size-content-xl: 1rem;
         --font-size-date: 0.75rem;
         --font-size-path: 0.75rem;
@@ -520,7 +522,7 @@ main {
     }
 
     .news-card {
-        row-gap: 10px;
+        row-gap: 15px;
     }
 
     .news-card__button {
@@ -547,6 +549,11 @@ main {
     .pagination__link--before,
     .pagination__link--next {
         width: 55px;
+    }
+
+    .pagination__arrow {
+        width: 18px;
+        height: 20px;
     }
 
     .work-news__container {
@@ -578,7 +585,6 @@ main {
 
     .work-news__content {
         row-gap: 10px;
-        line-height: 140%;
     }
 
     .work-news__button {
@@ -589,6 +595,5 @@ main {
 
     .footer {
         padding-block: 20px;
-        padding-inline: var(--base-page-inline-indent);
     }
 }
