--- a/assets/style.css
+++ b/assets/style.css
@@ -138,6 +138,7 @@ body {
 .button:hover {
     background-color: var(--color-brand);
     color: var(--color-white);
+    border-color: var(--color-brand-border);
 }
 
 
@@ -159,7 +160,7 @@ body {
     font-weight: 400;
     color: var(--color-purple);
     text-transform: uppercase;
-    letter-spacing: 0.12em;
+    letter-spacing: 12.5%;
     line-height: 132%;
 }
 
@@ -499,6 +500,10 @@ body {
         --font-size-button: 0.75rem;
     }
 
+    .button {
+        border-width: 1px;
+    }
+
     .header {
         padding-block: 15px;
         column-gap: 10px;
@@ -532,8 +537,8 @@ body {
     }
 
     .news-card__button::after {
-        width: 18px;
-        height: 18px;
+        width: 16px;
+        height: 16px;
     }
 
     .pagination__list {
@@ -544,6 +549,7 @@ body {
     .pagination__link {
         height: 35px;
         width: 35px;
+        border-width: 1px;
     }
 
     .pagination__link--before,
@@ -591,6 +597,11 @@ body {
         height: 35px;
         padding-inline: 25px;
         gap: 5px;
+    }
+
+    .work-news__button::before {
+        width: 16px;
+        height: 16px;
     }
 
     .footer {
